Fix border overlapping issue for consultations on mobile
https://www.pivotaltracker.com/story/show/60420954

--- a/app/assets/stylesheets/frontend/views/_consultations.scss
+++ b/app/assets/stylesheets/frontend/views/_consultations.scss
@@ -137,7 +137,7 @@ nav.consultations_scope {
       .consultation-summary-inner {
         border-top: 1px solid $white;
         padding-top: $gutter-half;
-        margin-top: -$gutter-half + 1px;
+        margin-top: $gutter-half;
 
         @include media(tablet) {
           border-top: 0;
